tests/baselines/reference/callOverloads4.errors.txt
==== tests/cases/compiler/callOverloads4.ts (2 errors) ====
    
    function Foo():Foo;
    function Foo(s:string):Foo;
    class Foo {    
    ~~~~~
!!! error TS1041: Function implementation expected.
          ~~~
!!! error TS2000: Duplicate identifier 'Foo'.
        bar1() { /*WScript.Echo("bar1");*/ }
        constructor(s: string);
        constructor(x: any) {
            // WScript.Echo("Constructor function has executed");
        }
    }
    
    var f1 = new Foo("hey");
    
    
    f1.bar1();
    Foo();
    Foo("s");
    